<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:scaleType="fitCenter"
        android:src="@drawable/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding_big"
        android:paddingRight="@dimen/activity_padding_big">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="邮箱："
            android:textColor="@color/colorLightText" />

        <com.zw.lexue.widgets.EmailAutoCompleteTextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorLightText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding_big"
        android:paddingRight="@dimen/activity_padding_big">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="密码："
            android:textColor="@color/colorLightText" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="@color/colorLightText" />
    </LinearLayout>


    <TextView
        android:id="@+id/textForgivePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/activity_margin_small"
        android:clickable="true"
        android:text="@string/text_forgive_password"
        android:textColor="@drawable/selector_clickable_text_color"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_padding_big"
        android:paddingRight="@dimen/activity_padding_big">

        <Button
            android:id="@+id/buttonToRegister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/activity_margin_big"
            android:layout_weight="1"
            android:background="@drawable/selector_dark_button_ripple"
            android:gravity="center"
            android:text="@string/msg_register"
            android:textColor="@color/colorLightText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/activity_margin_big"
            android:layout_weight="1"
            android:background="@drawable/selector_dark_button_ripple"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/button_login"
            android:textColor="@color/colorLightText"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>