<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llBack"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="@dimen/title_length"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true">
            <ImageView
                app:srcCompat="@drawable/icon_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/title"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_big" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_small"
        android:background="@drawable/selector_background_ripple"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/portrait"
            android:layout_width="@dimen/portrait_size_middle"
            android:layout_height="@dimen/portrait_size_middle"
            android:layout_margin="@dimen/activity_margin_middle"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image"
            app:riv_border_color="@color/colorDarkBackground"
            app:riv_border_width="1dp"
            app:riv_mutate_background="true"
            app:riv_oval="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/activity_padding_small"
                android:text="@string/user_name"
                android:textColor="@color/colorDarkestText"
                android:textSize="@dimen/title_text_big" />

            <TextView
                android:id="@+id/userWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/user_words"
                android:textColor="@color/colorDarkText"
                android:textSize="@dimen/title_text_middle" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_margin_small">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/colorTransparentBackground"
            android:dividerHeight="@dimen/items_margin_12dp" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>