<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zw.lexue.activitys.MainActivity">

    <com.zw.lexue.widgets.NoScrollViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"></com.zw.lexue.widgets.NoScrollViewPager>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDarkBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nev_bar_height"
        android:background="@color/colorBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_padding_small"
            android:paddingTop="@dimen/activity_padding_small">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:maxHeight="@dimen/nev_image_max_size"
                android:maxWidth="@dimen/nev_default_size"
                app:srcCompat="@drawable/selector_nev_image_home" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/title_home"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/nev_default_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_padding_small"
            android:paddingTop="@dimen/activity_padding_small">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:maxHeight="@dimen/nev_image_max_size"
                android:maxWidth="@dimen/nev_default_size"
                app:srcCompat="@drawable/selector_nev_image_search" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/title_search"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/nev_default_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_padding_small"
            android:paddingTop="@dimen/activity_padding_small">

            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:maxHeight="@dimen/nev_image_max_size"
                android:maxWidth="@dimen/nev_default_size"
                app:srcCompat="@drawable/selector_nev_image_user" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/title_user"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/nev_default_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
